[package]
name = "scalar_issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.4"
aide = { version = "0.13.2", features = [
    "axum",
    "axum-extra",
    "macros",
    "scalar",
] }
serde_yaml = "0.9.30"
schemars = { version = "0.8.16" }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["tracing", "trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }